# prov_ledger

./: .gitignore  INSTALL.md  LICENSE  Makefile  README.md  orchestrator-cli.py  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
commands/: provledger-dashboard.md
docs/: benchmark-silent-class-drop.md
hooks/: hooks.json
orchestrator-backend/: .gitignore  backfill_from_markdown.py  pyproject.toml
orchestrator-backend/migrations/: 002_step_types_and_agent_io.sql  003_user_query.sql  005_skill_activations.sql  006_review_step.sql  008_impact_context.sql  010_data_model.sql  011_completed_immutability.sql  012_data_profile.sql  013_llm_decisions.sql
orchestrator-backend/orchestrator/: __init__.py  api.py  circuit_breakers.py  data_loop.py  db.py  drift.py  profiler.py  state_machine.py  telemetry.py
orchestrator-backend/orchestrator/migrations/: 001_init_schema.sql  004_step_summary.sql  007_needs_review_status.sql  009_ledger_entries.sql
orchestrator-backend/tests/: conftest.py  test_api.py  test_circuit_breakers.py  test_data_loop.py  test_data_model_wiring.py  test_db.py  test_detect_registered_project.py  test_drift.py  test_llm_decisions.py  test_migration_006_review_step.py  test_migration_008_impact_context.py  test_migration_009_ledger.py  test_migration_010.py  test_migration_011.py  test_profiler.py  test_review_child_step.py  test_review_path_selection.py  test_review_recovery.py  test_skill_activations.py  test_state_machine.py  test_telemetry.py
orchestrator-webapp/: .gitignore  README.md  launch_dashboard.sh  pyproject.toml
scripts/: bootstrap.sh  install-tutorial.tape  pkg_smoke_test.py  pl-python  smoke_install.sh  test_packaging.sh
skills/project-state-graph/scripts/: architecture_md.py  archive_db.sh  init_project.sh  pyproject.toml  registry.py  selfcheck.py  visualize.py  viz_slices.py
skills/project-state-graph/scripts/analyzer/: _resolve.py  api_refs.py  cards.py  cli.py  data_model.py  dataflow.py  dataflow_types.py  de_overlay.py  export_viz.py  graph_viz.py  leakage.py  ml_overlay.py  pipeline.py  profiles.py  py_ast.py  routes.py  slice_viz.py  sql_refs.py  store.py  ts_polyglot.py  unresolved.py  viz_template.html  walker.py
skills/project-state-graph/scripts/tests/: test_api_refs.py  test_architecture_md.py  test_assumed_schema.py  test_cli.py  test_cold_archive.sh  test_commit_tag.py  test_confidence.py  test_consistency_cards.py  test_data_model.py  test_data_vars.py  test_dataflow.py  test_dataflow_types_resolution.py  test_de_overlay.py  test_dtype_columns.py  test_dtype_gate_e2e.py  test_export_viz.py  test_graph_viz.py  test_init_project.py  test_leakage.py  test_ml_overlay.py  test_pipeline.py  test_profiles.py  test_py_ast.py  test_py_ast_resolution.py  test_refs_resolution.py  test_registry.py  test_resolve.py  test_selfcheck.py  test_selfcheck_coverage.py  test_slice_viz.py  test_sql_refs.py  test_store.py  test_symbol_cards.py  test_ts_polyglot.py  test_unresolved.py  test_viz_slices_cli.py  test_viz_xss.py  test_walker.py
skills/update-project-state-graph/scripts/: contract_diff.py  graph_viz.py  pyproject.toml  review_diff.py  visualize.py
skills/update-project-state-graph/scripts/tests/: test_contract_diff.py  test_graph_viz.py  test_review_diff.py
tests/: test_bootstrap.py  test_dashboard_command.py  test_docs_install.py  test_hooks.py  (+4 more)
(+95 files in other folders)
