[project]
name = "project-graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=9.0.3",
    "tree-sitter>=0.25.2",
    "tree-sitter-css>=0.25.0",
    "tree-sitter-html>=0.23.2",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-python>=0.25.0",
]
